# omp-Server-Launcher-macOS

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE copy.md  CMakeLists.txt  Package.swift  README.md  To-Do.md  build-macos.sh  launcher.qrc
Sources/ServerLauncher/: App.swift
Sources/ServerLauncher/Core/: AppInfo.swift  BansStore.swift  ConfigStore.swift  LogTailer.swift  QawnoInstaller.swift  ReleasesStore.swift  ServerController.swift  ServerDetect.swift  ServerEnv.swift  ServersStore.swift  SnapshotStore.swift  Telemetry.swift  Updater.swift  WineManager.swift
Sources/ServerLauncher/Resources/: run-omp-server-wine.sh
Sources/ServerLauncher/Views/: BansView.swift  ConfigView.swift  ConsentSheet.swift  ContentView.swift  FooterView.swift  LicenseView.swift  LogsView.swift  OverviewView.swift  ServerPicker.swift  ServerView.swift  SettingsView.swift  SetupView.swift  Theme.swift
scripts/: build-app.sh  dmg-readme.txt  make-app-icon.swift  make-dmg-background.swift
src/: AppInfo.h  CrossOver.cpp  CrossOver.h  LauncherWindow.cpp  LauncherWindow.h  LicenseInfo.cpp  LicenseInfo.h  SymbolIcon.h  SymbolIcon.mm  TelemetryManager.cpp  TelemetryManager.h  ToggleSwitch.cpp  ToggleSwitch.h  Updater.cpp  Updater.h  main.cpp
swift-launcher/: Package.swift  STATUS.md
swift-launcher/Sources/ServerLauncher/: App.swift
swift-launcher/Sources/ServerLauncher/Core/: AppInfo.swift  BansStore.swift  ServerController.swift  Shell.swift  Telemetry.swift  WineManager.swift
swift-launcher/Sources/ServerLauncher/Views/: ConfigView.swift  ContentView.swift  FooterView.swift  LogLine.swift  ServerView.swift  SettingsView.swift
swift-launcher/scripts/: build-app.sh
swift-launcher/supabase/: README.md  telemetry_events.sql
swift-launcher/supabase/functions/telemetry/: index.ts
